[B]*** 0.1.3 ***[/B]
- Small change in "def Categories()" to parse correctly vbox7 category.

[B]*** 0.1.2 ***[/B]
- Modify thumbnail and icon image in addFolderListItem and addActionListItem for XBMC 11.0 and XBMC 12.0-Alpha7.

[B]*** 0.1.1 ***[/B]
- Workaround vbox7's js and cookie requirements

[B]*** 0.0.1 ***[/B]
- Initial release