@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.vbox7"
-       name="VBOX7"
-       version="0.1.3"
-       provider-name="steven, gonev">
+<addon id="plugin.video.vbox7" name="VBOX7" version="0.2.0" provider-name="steven, gonev">
   <requires>
     <import addon="xbmc.python" version="1.1"/>
   </requires>
