@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+
+    <!-- Plugin settings strings -->
+    <string id="30200">Username</string>
+    <string id="30202">User Section:</string>
+
+</strings>
